[package]
name = "elm-duet"
version = "0.1.0"
edition = "2021"
description = "Generate Elm and TypeScript types from a single shared definition."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
color-eyre = { version = "0.6.3", default_features = false }
eyre = "0.6.12"
jtd = "0.3.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1.40"

[profile.dev.package.backtrace]
opt-level = 3

[dev-dependencies]
trycmd = { version = "0.15.1", features = ["color"] }
